Add heavy Lambda
