# backend_api.gen.go
@@ -1,82 +1,0 @@
-// Package api_gen_code provides primitives to interact with the openapi HTTP API.
-//
-// Code generated by github.com/deepmap/oapi-codegen version v1.13.0 DO NOT EDIT.
-package api_gen_code
-
-// APIReadResponse defines model for APIReadResponse.
-type APIReadResponse struct {
-	// RequestType API Read RequestType (ExploreCategories, Ranking)
-	RequestType *string `json:"requestType,omitempty"`
-
-	// ResponseValue データをjsonにして返してクライアント側で処理をする
-	ResponseValue *string `json:"responseValue,omitempty"`
-
-	// UserId ユーザーID
-	UserId *string `json:"userId,omitempty"`
-}
-
-// APIWriteResponse defines model for APIWriteResponse.
-type APIWriteResponse struct {
-	// RequestType API Write RequestType:(Feed,UserRegister,SyncConfig,CodeSync,ReportActivity)
-	RequestType *string `json:"requestType,omitempty"`
-
-	// ResponseValue APIレスポンス JSONデータを入れる
-	ResponseValue *string `json:"responseValue,omitempty"`
-
-	// UserId ユーザーID
-	UserId *string `json:"userId,omitempty"`
-}
-
-// PostHeavyJSONBody defines parameters for PostHeavy.
-type PostHeavyJSONBody struct {
-	// RequestArgumentJson1 API Heavy Request Argument 1 Value
-	RequestArgumentJson1 *string `json:"requestArgumentJson1,omitempty"`
-
-	// RequestArgumentJson2 API Heavy Request Argument 2 Value
-	RequestArgumentJson2 *string `json:"requestArgumentJson2,omitempty"`
-
-	// RequestArgumentJson3 API Heavy Request Argument 3 Value
-	RequestArgumentJson3 *string `json:"requestArgumentJson3,omitempty"`
-
-	// RequestType API Heavy RequestType:(Feed,Search,SubscribeSite)
-	RequestType *string `json:"requestType,omitempty"`
-
-	// UserId ユーザーID
-	UserId *string `json:"userId,omitempty"`
-}
-
-// PostReadJSONBody defines parameters for PostRead.
-type PostReadJSONBody struct {
-	// RequestType API Read RequestType (ExploreCategories, Ranking)
-	RequestType *string `json:"requestType,omitempty"`
-
-	// UserId ユーザーID
-	UserId *string `json:"userId,omitempty"`
-}
-
-// PostWriteJSONBody defines parameters for PostWrite.
-type PostWriteJSONBody struct {
-	// RequestArgumentJson1 API Write Request Argument 1 Value
-	RequestArgumentJson1 *string `json:"requestArgumentJson1,omitempty"`
-
-	// RequestArgumentJson2 API Write Request Argument 2 Value
-	RequestArgumentJson2 *string `json:"requestArgumentJson2,omitempty"`
-
-	// RequestArgumentJson3 API Write Request Argument 3 Value
-	RequestArgumentJson3 *string `json:"requestArgumentJson3,omitempty"`
-
-	// RequestType API Write RequestType:(Feed,UserRegister,SyncConfig,CodeSync,ReportActivity,Search,SubscribeSite)
-	RequestType *string `json:"requestType,omitempty"`
-
-	// UserId ユーザーID
-	UserId *string `json:"userId,omitempty"`
-}
-
-// PostHeavyJSONRequestBody defines body for PostHeavy for application/json ContentType.
-type PostHeavyJSONRequestBody PostHeavyJSONBody
-
-// PostReadJSONRequestBody defines body for PostRead for application/json ContentType.
-type PostReadJSONRequestBody PostReadJSONBody
-
-// PostWriteJSONRequestBody defines body for PostWrite for application/json ContentType.
-type PostWriteJSONRequestBody PostWriteJSONBody
