# lambda/heavy/Data/response.go
@@ -1,0 +1,18 @@
+package Data
+
+
+type SearchResult struct{
+	// refuse, accept
+	ApiResponse string
+	ResponseMessage string
+	// found, none, error
+	ResultType string
+	Exception string
+	//AddContentならサイトを返す
+    //PowerSearchなら記事を返す
+	SearchType string
+	Websites []WebSite
+	Articles []Article
+}
+
+
